Product Tab fix on Safari

--- a/style.css
+++ b/style.css
@@ -1840,7 +1840,7 @@ strong{
 	}
 	.hot-tub-detail .tabContainer .tabs li a{
 		color:#FFF;
-		padding: 8px 42px 8px 12px;
+		padding: 8px 41px 8px 12px;
 		display:block;
 		background:url(images/icons/tabSeparator.png) bottom right no-repeat;
 	}
